src/main/kotlin/com/example/hexagonal/global/error/ErrorResponse.kt
package com.example.hexagonal.global.error

data class ErrorResponse(
    val status: Int,
    val message: String?
)